Fixed layout bug on iOS 7 and Chrome 43. Apparently, the Webkit version used by them does not support "flex: 1" or "flex-grow: auto". Instead, we need to set "flex: 1 0 auto", re-specifying the defaults.

--- a/source/demyo-web/src/main/webapp/css/demyo/demyo.layout.less
+++ b/source/demyo-web/src/main/webapp/css/demyo/demyo.layout.less
@@ -97,11 +97,11 @@ main.mdl-layout__content {
 	flex-wrap: nowrap;
 	
 	#page-content, #quickSearch-results {
-		flex: 1;
+		flex: 1 0 auto;
 	}
 	
 	footer.mdl-mini-footer {
-		flex-shrink: 0;
+		flex: 0 0 auto;
 	}
 }
 
